# canvas

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CODEOWNERS  Cargo.toml  README.md
.github/workflows/: release.yml  windows.yml
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/generic-pallet-v1/: Cargo.toml
pallets/generic-pallet-v1/src/: mock.rs
pallets/register/: Cargo.toml
pallets/register-old/src/: lib.rs  tests.rs
pallets/register/src/: lib.rs  serstring.rs  tests.rs
pallets/register2/: Cargo.toml
pallets/register4/: Cargo.toml
pallets/register4/src/: tests-expanded.rs
polkadot-launch/: .gitignore  config.json  launch.sh
res/: canvas-rococo.json  testnet-1.json
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  statemine.rs
scripts/: benchmarks.sh  prepare-test-net.sh  substrate-diff.sh
scripts/dockerfiles/: canvas_injected.Dockerfile
src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
