[package]
name = "canvas-node"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-only"
description = "A node implementation for Canvas, a Substrate parachain for smart contracts."
homepage = "https://github.com/paritytech/canvas"
repository = "https://github.com/paritytech/canvas"
build = "build.rs"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }

[[bin]]
name = 'canvas'
path = 'src/main.rs'

[features]
runtime-benchmarks = ['canvas-runtime/runtime-benchmarks']
contracts-unstable-interface = ['canvas-runtime/contracts-unstable-interface']

[dependencies]
derive_more = '0.99.2'
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = '0.3.8'
serde = { version = '1.0.119', features = ['derive'] }
hex-literal = '0.3.1'

# RPC related Dependencies
jsonrpc-core = '15.1.0'

# Local Dependencies
canvas-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "hc-contract-experiment-patched-v0.9.9" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-service = { git = 'https://github.com/paritytech/substrate', features = ['wasmtime'] , branch = "hc-contract-experiment-patched-v0.9.9" }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "hc-contract-experiment-patched-v0.9.9" }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }

# Polkadot dependencies
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }

# Contracts specific packages
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "hc-contract-experiment-patched-v0.9.9" }
