[package]
name = "canvas-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-only"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }

# Substrate Dependencies
## Substrate Primitive Dependencies
# TODO: Maybe get rif of `package=...` line
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", package = "sp-block-builder", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", package = "sp-offchain", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", package = "sp-session", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sp-transaction-pool", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", package = "sp-version", default-features = false }

## Substrate FRAME Dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", package = "frame-executive", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-system-benchmarking", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "frame-system-rpc-runtime-api", default-features = false }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", package = "pallet-aura", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", package = "pallet-randomness-collective-flip", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", package = "pallet-sudo", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false }

# Polkadot Dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false }

[build-dependencies]
substrate-wasm-builder =  { git = "https://github.com/paritytech/substrate", package = "substrate-wasm-builder" }

[features]
default = [
    "std",
    # temporarily enable unstable contracts features by default, remove this before using on a production chain.
    "contracts-unstable-interface",
]
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
    # TODO: Maybe have contract benchmarks here?
]
std = [
	"codec/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
    "pallet-contracts/unstable-interface"
]
