[package]
name = "canvas-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-only"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }

## Substrate FRAME Dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , branch = "cmichi-tmp-experiment" }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = "cmichi-tmp-experiment" }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , branch = "cmichi-tmp-experiment" }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "cmichi-tmp-experiment" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "cmichi-tmp-experiment" }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
parachain-info = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "hc-contract-experiment-patched-v0.9.9" }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false, branch = "cmichi-tmp-experiment" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false, branch = "cmichi-tmp-experiment" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false, branch = "cmichi-tmp-experiment" }

[features]
default = [
	"std",
	# temporarily enable unstable contracts features by default, remove this before using on a production chain.
	"contracts-unstable-interface",
]
std = [
	"codec/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
]

# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]

runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
]
